<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddMedocPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D3C3B"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/PageTitle"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:background="#457874"
        android:paddingTop="8dp"
        android:text="@string/add_prise_page_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Name_Text"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:text="@string/medoc_text"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/medoc_container"
        android:layout_width="match_parent"
        android:layout_height="111dp" >

        <LinearLayout
            android:id="@+id/medoc_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/Date_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_text"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_Start_Text_Date"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:text="date" />

        <EditText
            android:id="@+id/edit_End_Text_Date"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:text="date" />

    </LinearLayout>

    <TextView
        android:id="@+id/Prises_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/prises_text"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/Matin_CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/matin_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/Midi_CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/midi_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/Soir_CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/soir_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/Ajouter_Button"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginTop="32dp"
        android:background="#0B0E0E"
        android:text="@string/validate_button"
        android:textColorHighlight="#258C82"
        android:textColorLink="#009688"
        android:textSize="34sp" />

</LinearLayout>