<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/AddMedocPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2D3C3B"
        android:orientation="vertical"
        tools:context=".controllers.MainActivity">

        <TextView
            android:id="@+id/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:background="#457874"
            android:paddingTop="8dp"
            android:text="@string/add_medoc_page_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Name_Text"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:paddingTop="8dp"
            android:text="@string/nom_text"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />

        <TextView
            android:id="@+id/Date_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/default_time_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editDefaultDurée"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/Prises_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/default_prise_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Matin_CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/matin_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/Midi_CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/midi_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/Soir_CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/soir_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/Ajouter_Button"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginTop="32dp"
            android:background="#0B0E0E"
            android:text="@string/ajouter_button"
            android:textColorHighlight="#258C82"
            android:textColorLink="#009688"
            android:textSize="34sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>