<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/jour_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="jour"
        android:textAlignment="center"
        android:textColor="@color/blueDate"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matin_text"
        android:textAlignment="center"
        android:textColor="@color/blueTime"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/matin_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/midi_text"
        android:textAlignment="center"
        android:textColor="@color/blueTime"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/midi_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soir_text"
        android:textAlignment="center"
        android:textColor="@color/blueTime"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/soir_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>